# stack

./: .gitignore  LICENSE.md  Makefile  README.md
.github/workflows/: greetings.yml
API/modules/: arduino  binary  binary.sth  bintree  bintree.st  bintree.sth  cli  cli.sth  colors  colors.st  colors.sth  dll.st  dll.sth  embed  embedded.st  embedded.sth  keyboard  keyboard.st  keyboard.sth  maths  maths.st  maths.sth  registry  rng  rng.st  rng.sth  std  structs
API/stdlib/: aliases.h  consts.h  dlls.h  funcs.h  libs.h  stack.h  starlang.h  std.h  syntax.h  types.h
cli/: Cargo.toml
cli/src/: main.rs
heap/: Cargo.toml
install/: stack.unix.sh  stack.win.bat  stack.win.nsi
stack/: Cargo.toml
stack/src/: main.rs  stack.rs
tests/: binary.st  bintree.st  colors.st  embedded.st  hello.st  random.st
