[package]
name = "stack"
description = "A language that allows the control of C and the ergonomics of JAVA"
version = "0.1.0"
readme = "../README.md"
license-file = "../LICENSE.md"
authors = ["HDB-PROGRAMMING <hdbprogramming@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "^0.3.20"
exitfailure = "^0.5.1"
cc = "^1.0.65"